--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-															<h3><a href="#">Time-series Decomposition</a></h3>
+															<a href="portfolio.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+															<h3><a href="portfolio.html">Time-series Decomposition</a></h3>
 															<p>
 																Using dimensionality reduction methods to find seasonal 
 																patterns in time-series water column data from the Northern 
@@ -115,8 +115,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Predictive Modeling</a></h3>
+															<a href="portfolio/predmodeling.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+															<h3><a href="portfolio/predmodeling.html">Predictive Modeling</a></h3>
 															<p>
 																Classifying coastal upwelling with machine learning models
 																and water column temperature in Oregon, WA.
@@ -128,8 +128,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">Computer Vision</a></h3>
+															<a href="portfolio/compvision.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+															<h3><a href="portfolio/compvision.html">Computer Vision</a></h3>
 															<p>
 																Training computer vision models to recognize face masks 
 																in the pandemic.
@@ -141,8 +141,8 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-															<h3><a href="#">Natural Language Processing</a></h3>
+															<a href="portfolio/nlp.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+															<h3><a href="portfolio/nlp.html">Natural Language Processing</a></h3>
 															<p>
 																Sentiment analysis and classification of Reddit posts using 
 																NLP packages in Python.
