--- a/funstuff/sideprojects.html
+++ b/funstuff/sideprojects.html
@@ -23,33 +23,32 @@
 						</div>
 					</div>
 				</header>
-
+				
 			<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li>
-							<a href="#">Dropdown</a>
-							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li>
-									<a href="#">Phasellus consequat</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Phasellus consequat</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Veroeros feugiat</a></li>
-							</ul>
-						</li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
-					</ul>
-				</nav>
+			<nav id="nav">
+				<ul>
+					<li><a href="../index.html">Home</a></li>
+					<li><a href="../portfolio.html">Portfolio</a>
+						<ul>
+							<li><a href="../portfolio.html">Time-Series Decomposition</a></li>
+							<li><a href="../portfolio/predmodeling.html">Predictive Modeling</a></li>
+							<li><a href="../portfolio/compvision.html">Computer Vision</a></li>
+							<li><a href="../portfolio/nlp.html">Natural Language Processing</a></li>
+							<li><a href="../portfolio/analysis.html">Data Analysis</a></li>
+						</ul>
+					</li>
+					<li><a href="../blog.html">Blog</a></li>
+					<li><a href="../about.html">About me</a></li>
+					<li class="current">
+						<a href="../fun.html">Just for fun</a>
+						<ul>
+							<li><a href="sideprojects.html">Side projects</a></li>
+							<li><a href="painting.html">Paintings</a></li>
+							<li><a href="fungraphs.html">Fun graphs</a></li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
 
 			<!-- Main -->
 				<section id="main">
