--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
 
 								<!-- Features -->
 									<section class="box features">
-										<h2 class="major"><span>A Major Heading</span></h2>
+										<h2 class="major"><span>More Projects</span></h2>
 										<div>
 											<div class="row">
 												<div class="col-3 col-6-medium col-12-small">
@@ -132,10 +132,10 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-															<h3><a href="#">A Subheading</a></h3>
+															<h3><a href="#">Predictive Modeling</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Classifying coastal upwelling with machine learning models
+																using water column temperature in Oregon, WA.
 															</p>
 														</section>
 
@@ -145,10 +145,10 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-															<h3><a href="#">Another Subheading</a></h3>
+															<h3><a href="#">Computer Vision</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Training computer vision models to recognize face masks 
+																in the pandemic.
 															</p>
 														</section>
 
@@ -158,10 +158,10 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-															<h3><a href="#">And Another</a></h3>
+															<h3><a href="#">Natural Language Processing</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Sentiment analysis and classification of Reddit posts using 
+																NLP packages in Python.
 															</p>
 														</section>
 
@@ -171,10 +171,10 @@
 													<!-- Feature -->
 														<section class="box feature">
 															<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-															<h3><a href="#">And One More</a></h3>
+															<h3><a href="#">Data Analysis</a></h3>
 															<p>
-																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
-																lectus dolore. Praesent semper mod quis eget sed etiam eu ante risus.
+																Analysis and visualization of Clivar & Carbon Hydrographic Data 
+																Office Bermuda Atlantic Time Series (CCHDO BATS) data.
 															</p>
 														</section>
 
